@@ -1,0 +1,95 @@
+<!--
+  Copyright (c) 2013 - Alexandre Jorge Fonseca (alexjf.net)
+  License: GPL v3 (http://www.gnu.org/licenses/gpl-3.0.txt)
+-->
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:padding="15dp" >
+    <TextView android:id="@+id/description_label"
+            android:text="@string/description"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content" 
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentRight="true"
+            android:gravity="center_vertical" />
+    <EditText android:id="@+id/description_text"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentRight="true"
+            android:layout_below="@id/description_label"
+            android:singleLine="true" />
+    <TextView android:id="@+id/category_label"
+            android:text="@string/category"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" 
+            android:layout_alignParentLeft="true"
+            android:layout_below="@id/description_text"
+            android:layout_alignTop="@+id/category_button"
+            android:layout_alignBottom="@id/category_button"
+            android:gravity="center_vertical" />
+    <net.alexjf.tmm.views.SelectorButton
+            android:id="@id/category_button"
+            android:text="@string/choose"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:layout_toRightOf="@id/category_label"
+            android:layout_below="@id/description_text" />
+    <TextView android:id="@+id/executionDate_label"
+            android:text="@string/executionDate"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp" 
+            android:layout_alignParentLeft="true"
+            android:layout_below="@id/category_label"
+            android:layout_alignTop="@+id/executionDate_button"
+            android:layout_alignBottom="@id/executionDate_button"
+            android:gravity="center_vertical" />
+    <Button android:id="@id/executionDate_button"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@id/executionDate_label"
+            android:layout_alignParentRight="true"
+            android:layout_below="@id/category_button"
+            android:freezesText="true" />
+    <Button android:id="@id/executionTime_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@id/executionDate_button"
+            android:layout_alignParentRight="true"
+            android:layout_below="@id/executionDate_button"
+            android:freezesText="true" />
+    <TextView android:id="@+id/value_label"
+            android:text="@string/value"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content" 
+            android:layout_alignLeft="@+id/value_text"
+            android:layout_alignRight="@id/value_text"
+            android:layout_below="@id/executionTime_button"
+            android:gravity="center_vertical" />
+    <EditText android:id="@id/value_text"
+            android:inputType="number|numberSigned|numberDecimal"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_toLeftOf="@+id/currency_label"
+            android:layout_below="@id/value_label" 
+            android:singleLine="true" />
+    <TextView android:id="@id/currency_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" 
+            android:layout_alignParentRight="true"
+            android:layout_below="@id/value_label"
+            android:layout_alignTop="@id/value_text"
+            android:layout_alignBottom="@id/value_text"
+            android:layout_marginLeft="5dp"
+            android:gravity="center_vertical" />
+    <Button android:id="@+id/add_button"
+            android:text="@string/add"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_below="@id/value_text"
+            android:layout_marginTop="5dp" />
+</RelativeLayout>
