@@ -1,5 +1,7 @@
 Next version - To be defined
 - Added secure backup and restore of data and user settings.
+- Added option to choose tab navigation mode (tabs, swipe or both).
+- Fixed transaction editor activity on small screens.
 - Put EUR, USD and GBP at the top of the currency list.
 - Fix bug in date selection if custom interval set as default.
 
